--- a/.github/workflows/malcolm-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/malcolm-iso-build-docker-wrap-push-ghcr.yml
@@ -46,8 +46,7 @@ jobs:
       -
         name: Build environment setup
         run: |
-          sudo swapoff /swapfile || true
-          sudo rm -rf /swapfile /usr/share/dotnet /usr/local/lib/android /opt/ghc || true
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc || true
           sudo env DEBIAN_FRONTEND=noninteractive apt purge aria2 ansible azure-cli shellcheck rpm zsync \
             clang-6.0 lldb-6.0 lld-6.0 clang-format-6.0 clang-8 lldb-8 lld-8 clang-format-8 \
             clang-9 lldb-9 lld-9 clangd-9 clang-format-9 dotnet-sdk-3.0 dotnet-sdk-3.1=3.1.101-1 \
@@ -145,6 +144,7 @@ jobs:
               docker rmi "$REPO_IMAGE"
           done
           DEST_IMAGES_TXZ=$(pwd)/malcolm_"$(date +%Y.%m.%d_%H:%M:%S)"_${{ steps.extract_commit_sha.outputs.sha }}_images.tar.xz
+          echo "Saving Malcolm Docker images to \"$DEST_IMAGES_TXZ\""
           docker save "${IMAGES[@]}" | xz --fast > "$DEST_IMAGES_TXZ"
           for IMAGE in "${IMAGES[@]}"; do
             docker rmi "$IMAGE"
