--- a/.github/workflows/malcolm-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/malcolm-iso-build-docker-wrap-push-ghcr.yml
@@ -46,240 +46,139 @@ jobs:
       -
         name: Build environment setup
         run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc || true
-          dpkg --get-selections
           DEBIAN_PACKAGE_LIST=(
-            ansible
             ant
             ant-optional
-            apt-transport-https
             aria2
+            aspnetcore-runtime-6.0
+            aspnetcore-runtime-7.0
+            aspnetcore-targeting-pack-6.0
+            aspnetcore-targeting-pack-7.0
             azure-cli
-            bazel
-            cabal-install-2.0
-            cabal-install-2.2
-            cabal-install-2.4
-            cabal-install-3.0
-            cabal-install-3.2
-            chrpath
-            clang-6.0
-            clang-8
-            clang-9
-            clang-format-6.0
-            clang-format-8
-            clang-format-9
-            clangd-9
-            dotnet-sdk-3.0
-            dotnet-sdk-3.1=3.1.101-1
-            esl-erlang
+            clang-12
+            clang-13
+            clang-format-12
+            clang-format-13
+            clang-tidy-12
+            clang-tidy-13
+            clang-tools-12
+            clang-tools-13
+            dotnet-apphost-pack-6.0
+            dotnet-apphost-pack-7.0
+            dotnet-host
+            dotnet-hostfxr-6.0
+            dotnet-hostfxr-7.0
+            dotnet-runtime-6.0
+            dotnet-runtime-7.0
+            dotnet-runtime-deps-6.0
+            dotnet-runtime-deps-7.0
+            dotnet-sdk-6.0
+            dotnet-sdk-7.0
+            dotnet-targeting-pack-6.0
+            dotnet-targeting-pack-7.0
             firefox
-            g++-8
+            g++-10
+            g++-11
             g++-9
-            gfortran-8
+            gfortran-10
+            gfortran-11
             gfortran-9
-            ghc-8.0.2
-            ghc-8.10.1
-            ghc-8.2.2
-            ghc-8.4.4
-            ghc-8.6.2
-            ghc-8.6.3
-            ghc-8.6.4
-            ghc-8.6.5
-            ghc-8.8.1
-            ghc-8.8.2
-            ghc-8.8.3
             google-chrome-stable
             google-cloud-sdk
-            heroku
-            imagemagick
-            kubectl
-            libfontconfig1
-            libfontconfig1-dev
-            libfreetype6
-            libfreetype6-dev
-            libmagic-dev
+            liblldb-12
+            liblldb-13
+            libllvm12:amd64
+            libllvm13:amd64
             libmagickcore-dev
             libmagickwand-dev
             libmysqlclient-dev
             libpq-dev
-            libssl-dev
-            libxft-dev
-            lld-6.0
-            lld-8
-            lld-9
-            lldb-6.0
-            lldb-8
-            lldb-9
             mercurial
-            mongodb-org
             mono-complete
             mssql-tools
             mysql-client
             mysql-server
-            php-amqp
-            php-apcu
-            php-igbinary
-            php-memcache
-            php-memcached
-            php-mongodb
-            php-redis
-            php-xdebug
-            php-zmq
-            php7.1
-            php7.1-bcmath
-            php7.1-bz2
-            php7.1-cgi
-            php7.1-cli
-            php7.1-common
-            php7.1-curl
-            php7.1-dba
-            php7.1-dev
-            php7.1-enchant
-            php7.1-fpm
-            php7.1-gd
-            php7.1-gmp
-            php7.1-imap
-            php7.1-interbase
-            php7.1-intl
-            php7.1-json
-            php7.1-ldap
-            php7.1-mbstring
-            php7.1-mcrypt
-            php7.1-mysql
-            php7.1-odbc
-            php7.1-opcache
-            php7.1-pgsql
-            php7.1-phpdbg
-            php7.1-pspell
-            php7.1-readline
-            php7.1-recode
-            php7.1-snmp
-            php7.1-soap
-            php7.1-sqlite3
-            php7.1-sybase
-            php7.1-tidy
-            php7.1-xml
-            php7.1-xmlrpc
-            php7.1-xsl
-            php7.1-zip
-            php7.2
-            php7.2-bcmath
-            php7.2-bz2
-            php7.2-cgi
-            php7.2-cli
-            php7.2-common
-            php7.2-curl
-            php7.2-dba
-            php7.2-dev
-            php7.2-enchant
-            php7.2-fpm
-            php7.2-gd
-            php7.2-gmp
-            php7.2-imap
-            php7.2-interbase
-            php7.2-intl
-            php7.2-json
-            php7.2-ldap
-            php7.2-mbstring
-            php7.2-mysql
-            php7.2-odbc
-            php7.2-opcache
-            php7.2-pgsql
-            php7.2-phpdbg
-            php7.2-pspell
-            php7.2-readline
-            php7.2-recode
-            php7.2-snmp
-            php7.2-soap
-            php7.2-sqlite3
-            php7.2-sybase
-            php7.2-tidy
-            php7.2-xml
-            php7.2-xmlrpc
-            php7.2-xsl
-            php7.2-zip
-            php7.3
-            php7.3-bcmath
-            php7.3-bz2
-            php7.3-cgi
-            php7.3-cli
-            php7.3-common
-            php7.3-curl
-            php7.3-dba
-            php7.3-dev
-            php7.3-enchant
-            php7.3-fpm
-            php7.3-gd
-            php7.3-gmp
-            php7.3-imap
-            php7.3-interbase
-            php7.3-intl
-            php7.3-json
-            php7.3-ldap
-            php7.3-mbstring
-            php7.3-mysql
-            php7.3-odbc
-            php7.3-opcache
-            php7.3-pgsql
-            php7.3-phpdbg
-            php7.3-pspell
-            php7.3-readline
-            php7.3-recode
-            php7.3-snmp
-            php7.3-soap
-            php7.3-sqlite3
-            php7.3-sybase
-            php7.3-tidy
-            php7.3-xml
-            php7.3-xmlrpc
-            php7.3-xsl
-            php7.3-zip
-            php7.4
-            php7.4-bcmath
-            php7.4-bz2
-            php7.4-cgi
-            php7.4-cli
-            php7.4-common
-            php7.4-curl
-            php7.4-dba
-            php7.4-dev
-            php7.4-enchant
-            php7.4-fpm
-            php7.4-gd
-            php7.4-gmp
-            php7.4-imap
-            php7.4-interbase
-            php7.4-intl
-            php7.4-json
-            php7.4-ldap
-            php7.4-mbstring
-            php7.4-mysql
-            php7.4-odbc
-            php7.4-opcache
-            php7.4-pgsql
-            php7.4-phpdbg
-            php7.4-pspell
-            php7.4-readline
-            php7.4-snmp
-            php7.4-soap
-            php7.4-sqlite3
-            php7.4-sybase
-            php7.4-tidy
-            php7.4-xml
-            php7.4-xmlrpc
-            php7.4-xsl
-            php7.4-zip
+            php-common
+            php-pear
+            php8.1
+            php8.1-amqp
+            php8.1-apcu
+            php8.1-bcmath
+            php8.1-bz2
+            php8.1-cgi
+            php8.1-cli
+            php8.1-common
+            php8.1-curl
+            php8.1-dba
+            php8.1-dev
+            php8.1-enchant
+            php8.1-fpm
+            php8.1-gd
+            php8.1-gmp
+            php8.1-igbinary
+            php8.1-imagick
+            php8.1-imap
+            php8.1-interbase
+            php8.1-intl
+            php8.1-ldap
+            php8.1-mbstring
+            php8.1-memcache
+            php8.1-memcached
+            php8.1-mongodb
+            php8.1-msgpack
+            php8.1-mysql
+            php8.1-odbc
+            php8.1-opcache
+            php8.1-pcov
+            php8.1-pgsql
+            php8.1-phpdbg
+            php8.1-pspell
+            php8.1-readline
+            php8.1-redis
+            php8.1-snmp
+            php8.1-soap
+            php8.1-sqlite3
+            php8.1-sybase
+            php8.1-tidy
+            php8.1-xdebug
+            php8.1-xml
+            php8.1-xsl
+            php8.1-yaml
+            php8.1-zip
+            php8.1-zmq
             pollinate
-            postgresql-client
+            postgresql-14
+            postgresql-client-14
+            postgresql-client-common
+            postgresql-common
             powershell
+            r-base
+            r-base-core
+            r-base-dev
+            r-base-html
+            r-cran-boot
+            r-cran-class
+            r-cran-cluster
+            r-cran-codetools
+            r-cran-foreign
+            r-cran-kernsmooth
+            r-cran-lattice
+            r-cran-mass
+            r-cran-matrix
+            r-cran-mgcv
+            r-cran-nlme
+            r-cran-nnet
+            r-cran-rpart
+            r-cran-spatial
+            r-cran-survival
+            r-doc-html
+            r-recommended
             rpm
             ruby-full
             shellcheck
             snmp
             sphinxsearch
             subversion
-            unixodbc-dev
-            yarn
             zsync
           )
           for i in ${DEBIAN_PACKAGE_LIST[@]}; do
@@ -287,6 +186,7 @@ jobs:
           done
           sudo env DEBIAN_FRONTEND=noninteractive apt-get autoremove -y >/dev/null 2>&1 || true
           sudo env DEBIAN_FRONTEND=noninteractive apt-get autoclean -y >/dev/null 2>&1 || true
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc || true
           sudo env DEBIAN_FRONTEND=noninteractive apt-get -q update
           sudo env DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y -q \
                apt-transport-https \
