--- a/kubernetes/05-upload.yml
+++ b/kubernetes/05-upload.yml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
       - name: upload-container
-        image: ghcr.io/mmguero-dev/malcolm/file-upload:development
+        image: ghcr.io/idaholab/malcolm/file-upload:23.07.0
         imagePullPolicy: Always
         stdin: false
         tty: true
@@ -75,7 +75,7 @@ spec:
             subPath: "upload"
       initContainers:
       - name: upload-dirinit-container
-        image: ghcr.io/mmguero-dev/malcolm/dirinit:development
+        image: ghcr.io/idaholab/malcolm/dirinit:23.07.0
         imagePullPolicy: Always
         stdin: false
         tty: true
