--- a/kubernetes/18-netbox.yml
+++ b/kubernetes/18-netbox.yml
@@ -36,7 +36,7 @@ spec:
     spec:
       containers:
       - name: netbox-container
-        image: ghcr.io/mmguero-dev/malcolm/netbox:development
+        image: ghcr.io/idaholab/malcolm/netbox:23.07.0
         imagePullPolicy: Always
         stdin: false
         tty: true
@@ -90,7 +90,7 @@ spec:
             subPath: netbox/media
       initContainers:
       - name: netbox-dirinit-container
-        image: ghcr.io/mmguero-dev/malcolm/dirinit:development
+        image: ghcr.io/idaholab/malcolm/dirinit:23.07.0
         imagePullPolicy: Always
         stdin: false
         tty: true
