fix parsing of Modbus, idaholab/Malcolm#225

--- a/logstash/pipelines/zeek/12_zeek_mutate.conf
+++ b/logstash/pipelines/zeek/12_zeek_mutate.conf
@@ -995,6 +995,7 @@ filter {
     mutate {
       id => "mutate_rename_modbus_detailed_fields"
       rename => { "[zeek][modbus_detailed][func]" => "[zeek][modbus][func]" }
+      rename => { "[zeek][modbus_detailed][unit_id]" => "[zeek][modbus][unit_id]" }
     }
 
   } else if ([log_source] == "modbus_mask_write_register") {
