--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -41,6 +41,7 @@ command=/opt/netbox/venv/bin/python /usr/local/bin/netbox_init.py
   --library "%(ENV_NETBOX_DEVICETYPE_LIBRARY_PATH)s"
   --service-templates /etc/service-template-defaults.json
   --device-roles /etc/device-roles-defaults.json
+  --manufacturers /etc/manufacturers-default.json
 autostart=true
 autorestart=false
 startsecs=0
