--- a/malcolm-iso/config/includes.binary/install/preseed_base.cfg
+++ b/malcolm-iso/config/includes.binary/install/preseed_base.cfg
@@ -32,7 +32,7 @@ d-i apt-setup/use_mirror boolean false
 d-i finish-install/reboot_in_progress note
 
 d-i preseed/late_command string \
-  echo 'deb http://deb.debian.org/debian bookworm main contrib non-free' > /target/etc/apt/sources.list; \
+  echo 'deb http://deb.debian.org/debian bookworm main contrib non-free non-free-firmware' > /target/etc/apt/sources.list; \
   echo 'deb http://security.debian.org/debian-security bookworm-security main contrib non-free' >> /target/etc/apt/sources.list; \
   echo 'deb http://deb.debian.org/debian bookworm-updates main contrib non-free' >> /target/etc/apt/sources.list; \
   in-target bash /usr/local/bin/agg-init.sh; \
