--- a/sensor-iso/vagrant/Vagrantfile
+++ b/sensor-iso/vagrant/Vagrantfile
@@ -39,7 +39,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-STEP1
     dpkg-reconfigure debconf -f noninteractive -p critical
     export DEBIAN_FRONTEND=noninteractive
-    sed -i "s/main/main contrib non-free/g" /etc/apt/sources.list
+    sed -i "s/main/main contrib non-free non-free-firmware/g" /etc/apt/sources.list
     apt-get -qqy update
     apt-get -y install \
       apt-transport-https \
