--- a/.github/workflows/malcolm-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/malcolm-iso-build-docker-wrap-push-ghcr.yml
@@ -70,12 +70,12 @@ jobs:
                virt-what \
                xorriso \
                xz-utils
-          git clone --depth=1 --single-branch --recurse-submodules --shallow-submodules --branch='debian/1%20210407' 'https://salsa.debian.org/live-team/live-build.git' /tmp/live-build
+          git clone --depth=1 --single-branch --recurse-submodules --shallow-submodules --branch='debian/1%20230131' 'https://salsa.debian.org/live-team/live-build.git' /tmp/live-build
           cd /tmp/live-build
           dpkg-buildpackage -b -uc -us
           cd /tmp
           sudo dpkg -i /tmp/live-build*.deb
-          rm -rf /tmp/live-build
+          sudo rm -rf /tmp/live-build /tmp/live-build*.deb
       -
         name: Checkout
         uses: actions/checkout@v3
