--- a/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
+++ b/.github/workflows/sensor-iso-build-docker-wrap-push-ghcr.yml
@@ -66,10 +66,12 @@ jobs:
                squashfs-tools \
                virt-what \
                xorriso
-            git clone --depth=1 --single-branch --recurse-submodules --shallow-submodules --branch='debian/1%20210407' 'https://salsa.debian.org/live-team/live-build.git' /tmp/live-build
-            cd /tmp/live-build
-            dpkg-buildpackage -b -uc -us
-            sudo dpkg -i /tmp/live-build*.deb
+          git clone --depth=1 --single-branch --recurse-submodules --shallow-submodules --branch='debian/1%20230131' 'https://salsa.debian.org/live-team/live-build.git' /tmp/live-build
+          cd /tmp/live-build
+          dpkg-buildpackage -b -uc -us
+          cd /tmp
+          sudo dpkg -i /tmp/live-build*.deb
+          sudo rm -rf /tmp/live-build /tmp/live-build*.deb
       -
         name: Checkout
         uses: actions/checkout@v3
