set some packages as manually installed

--- a/malcolm-iso/config/includes.binary/install/preseed_base.cfg
+++ b/malcolm-iso/config/includes.binary/install/preseed_base.cfg
@@ -36,6 +36,7 @@ d-i preseed/late_command string \
   echo 'deb http://security.debian.org/debian-security bookworm-security main contrib non-free' >> /target/etc/apt/sources.list; \
   echo 'deb http://deb.debian.org/debian bookworm-updates main contrib non-free' >> /target/etc/apt/sources.list; \
   in-target bash /usr/local/bin/agg-init.sh; \
+  in-target bash -c "( apt-mark manual aide aide-common step-cli ) || true"; \
   in-target bash -c "(virt-what | grep -q vmware) || apt-get purge -y open-vm-tools-desktop"; \
   in-target bash -c "(virt-what | grep -q virtualbox) || apt-get purge -y virtualbox-guest*"; \
   in-target bash -c "(virt-what | grep -q -E 'qemu|kvm') || apt-get purge -y qemu-guest-agent"; \
