--- a/sensor-iso/config/includes.binary/install/preseed_base.cfg
+++ b/sensor-iso/config/includes.binary/install/preseed_base.cfg
@@ -48,6 +48,7 @@ d-i preseed/late_command string \
   echo 'deb http://deb.debian.org/debian bookworm-updates main contrib non-free' >> /target/etc/apt/sources.list; \
   in-target touch /etc/capture_storage_format; \
   in-target bash /usr/local/bin/sensor-init.sh; \
+  in-target bash -c "( apt-mark manual aide aide-common filebeat libbroker-dev netsniff-ng step-cli suricata* yara zeek* ) || true"; \
   in-target bash -c "(virt-what | grep -q vmware) || apt-get purge -y open-vm-tools-desktop"; \
   in-target bash -c "(virt-what | grep -q virtualbox) || apt-get purge -y virtualbox-guest*"; \
   in-target bash -c "(virt-what | grep -q -E 'qemu|kvm') || apt-get purge -y qemu-guest-agent"; \
