populate  netbox preload directory in ISO and packaged Malcolm. WIP for idaholab/Malcolm#228

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -564,7 +564,7 @@ services:
       - ./netbox/config:/etc/netbox/config:ro
       - ./netbox/media:/opt/netbox/netbox/media:rw
       - ./net-map.json:/usr/local/share/net-map.json:ro
-      - ./netbox/service-template-defaults.json:/etc/service-template-defaults.json:ro
+      - ./netbox/preload:/opt/netbox-preload/configmap:ro
     healthcheck:
       test: ["CMD", "curl", "--silent", "http://localhost:8080/netbox/api/" ]
       interval: 60s
