--- a/kubernetes/18-netbox.yml
+++ b/kubernetes/18-netbox.yml
@@ -81,10 +81,8 @@ spec:
             name: netbox-netmap-json-volume
           - mountPath: /etc/netbox/config/configmap
             name: netbox-config-volume
-          - mountPath: /etc/netbox/reports/configmap
-            name: netbox-reports-volume
-          - mountPath: /etc/netbox/scripts/configmap
-            name: netbox-scripts-volume
+          - mountPath: /opt/netbox-preload/configmap
+            name: netbox-preload-volume
           - mountPath: /opt/netbox/netbox/media
             name: netbox-media-volume
             subPath: netbox/media
@@ -113,12 +111,9 @@ spec:
         - name: netbox-config-volume
           configMap:
             name: netbox-config
-        - name: netbox-reports-volume
+        - name: netbox-preload-volume
           configMap:
-            name: netbox-reports
-        - name: netbox-scripts-volume
-          configMap:
-            name: netbox-scripts
+            name: netbox-preload
         - name: netbox-media-volume
           persistentVolumeClaim:
             claimName: config-claim
