--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -504,6 +504,7 @@ services:
       - ./netbox/config:/etc/netbox/config:ro
       - ./netbox/media:/opt/netbox/netbox/media:rw
       - ./net-map.json:/usr/local/share/net-map.json:ro
+      - ./netbox/preload:/opt/netbox-preload/configmap:ro
     healthcheck:
       test: ["CMD", "curl", "--silent", "http://localhost:8080/netbox/api/" ]
       interval: 60s
