--- a/kubernetes/05-upload.yml
+++ b/kubernetes/05-upload.yml
@@ -52,8 +52,6 @@ spec:
               name: ssl-env
           - secretRef:
               name: auth-env
-          - configMapRef:
-              name: upload-env
         env:
           - name: VIRTUAL_HOST
             value: "upload.malcolm.local"
@@ -84,7 +82,7 @@ spec:
               name: process-env
         env:
           - name: PUSER_MKDIR
-            value: "/data/pcap:upload"
+            value: "/data/pcap:upload/tmp,upload/variants"
         volumeMounts:
           - name: upload-pcap-volume
             mountPath: "/data/pcap"
