--- a/kubernetes/04-dashboards.yml
+++ b/kubernetes/04-dashboards.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: dashboards-container
-        image: ghcr.io/idaholab/malcolm/dashboards:23.08.0
+        image: ghcr.io/mmguero-dev/malcolm/dashboards:development
         imagePullPolicy: Always
         stdin: false
         tty: true
