--- a/scripts/third-party-environments/virter/malcolm-setup-02-clone-install.toml
+++ b/scripts/third-party-environments/virter/malcolm-setup-02-clone-install.toml
@@ -8,15 +8,34 @@ MALCOLM_REPO_BRANCH = "main"
 [[steps]]
 [steps.shell]
 script = '''
-echo "Setting up Malcolm"
+echo "Setting up Malcolm..."
 
 pushd "$HOME"
+touch "$HOME"/.hushlogin
+mkdir -p "$HOME"/.local/bin "$HOME"/.config/procps "$HOME"/.config/systemd/user
 
 git clone --depth=1 --single-branch --recurse-submodules --shallow-submodules -b "$MALCOLM_REPO_BRANCH" "https://github.com/$MALCOLM_REPO_OWNER/$MALCOLM_REPO_NAME"
-pushd Malcolm
 
+rm -f "$HOME"/.bashrc \
+      "$HOME"/.bash_aliases \
+      "$HOME"/.bash_functions \
+      "$HOME"/.config/procps/toprc \
+      "$HOME"/.selected_editor \
+      "$HOME"/.tmux.conf \
+      "$HOME"/.vimrc
+ln -s -r "$HOME"/Malcolm/malcolm-iso/config/includes.chroot/etc/bash.bash_aliases "$HOME"/.bash_aliases
+ln -s -r "$HOME"/Malcolm/malcolm-iso/config/includes.chroot/etc/bash.bash_functions "$HOME"/.bash_functions
+ln -s -r "$HOME"/Malcolm/malcolm-iso/config/includes.chroot/etc/skel/.bashrc "$HOME"/.bashrc
+ln -s -r "$HOME"/Malcolm/malcolm-iso/config/includes.chroot/etc/skel/.config/procps/toprc "$HOME"/.config/procps/toprc
+ln -s -r "$HOME"/Malcolm/malcolm-iso/config/includes.chroot/etc/skel/.selected_editor "$HOME"/.selected_editor
+ln -s -r "$HOME"/Malcolm/malcolm-iso/config/includes.chroot/etc/skel/.tmux.conf "$HOME"/.tmux.conf
+ln -s -r "$HOME"/Malcolm/malcolm-iso/config/includes.chroot/etc/skel/.vimrc "$HOME"/.vimrc
+ln -s -r -f "$HOME"/Malcolm/malcolm-iso/config/includes.chroot/etc/skel/.config/systemd/user/*.service "$HOME"/.config/systemd/user/
+
+pushd Malcolm
 python3 ./scripts/install.py --defaults --restart-malcolm
 sudo usermod -a -G docker "$USER"
+sudo loginctl enable-linger "$USER"
 sudo ln -s -r /usr/libexec/docker/cli-plugins/docker-compose /usr/local/bin/docker-compose
 sudo sysctl --system
 rm -f ~/Malcolm/.configured
