make it easier to define specific ports for protocol analyzers for Malcolm

--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -72,5 +72,7 @@ ZEEK_DISABLE_ICS_MODBUS=
 ZEEK_DISABLE_ICS_PROFINET=
 ZEEK_DISABLE_ICS_S7COMM=
 ZEEK_DISABLE_ICS_SYNCHROPHASOR=
+ZEEK_SYNCHROPHASOR_PORTS=
 ZEEK_SYNCHROPHASOR_DETAILED=
+ZEEK_GENISYS_PORTS=
 ZEEK_DISABLE_BEST_GUESS_ICS=true
