--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -76,7 +76,9 @@ export ZEEK_DISABLE_ICS_MODBUS=
 export ZEEK_DISABLE_ICS_PROFINET=
 export ZEEK_DISABLE_ICS_S7COMM=
 export ZEEK_DISABLE_ICS_SYNCHROPHASOR=
+export ZEEK_SYNCHROPHASOR_PORTS=
 export ZEEK_SYNCHROPHASOR_DETAILED=
+export ZEEK_GENISYS_PORTS=
 export ZEEK_DISABLE_BEST_GUESS_ICS=true
 
 # Suricata
