tweaks to modbus dashboards

--- a/logstash/pipelines/zeek/13_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/13_zeek_normalize.conf
@@ -808,6 +808,8 @@ filter {
                                                       merge => { "[event][result]" => "[zeek][ldap_search][result_code]" } } }
 
   if ([zeek][modbus]) {
+    mutate { id => "mutate_lowercase_field_modbus_network_direction"
+             lowercase => [ "[zeek][modbus][network_direction]" ] }
     if ([zeek][modbus][exception]) {
       # we have an exception, so set that as result
       mutate { id => "mutate_merge_normalize_zeek_modbus_exception"
