--- a/kubernetes/08-api.yml
+++ b/kubernetes/08-api.yml
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: api-container
-        image: ghcr.io/idaholab/malcolm/api:23.09.0
+        image: ghcr.io/mmguero-dev/malcolm/api:development
         imagePullPolicy: Always
         stdin: false
         tty: true
