work in progress on idaholab/Malcolm#258

--- a/config/beats-common.env.example
+++ b/config/beats-common.env.example
@@ -1,3 +1,6 @@
 # Whether or not Logstash will use require encrypted communications for any external
 #   Beats-based forwarders from which it will accept logs
 BEATS_SSL=true
+# host:port for connecting to Logstash instance. When using Malcolm's internal instance
+#   of Logstath this should be logstash:5044
+LOGSTASH_HOST=logstash:5044
