some initial work for idaholab/Malcolm#254, capt-re-only malcolm configuration; added malcolm and hedgehog profiles to docker-compose

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -5,6 +5,7 @@ version: '3.7'
 services:
   opensearch:
     image: ghcr.io/idaholab/malcolm/opensearch:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -38,6 +39,7 @@ services:
       start_period: 180s
   dashboards-helper:
     image: ghcr.io/idaholab/malcolm/dashboards-helper:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -65,6 +67,7 @@ services:
       start_period: 30s
   dashboards:
     image: ghcr.io/idaholab/malcolm/dashboards:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -91,6 +94,7 @@ services:
       start_period: 210s
   logstash:
     image: ghcr.io/idaholab/malcolm/logstash-oss:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -133,6 +137,7 @@ services:
       start_period: 600s
   filebeat:
     image: ghcr.io/idaholab/malcolm/filebeat-oss:23.10.0
+    profiles: ["malcolm", "hedgehog"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -168,6 +173,8 @@ services:
       start_period: 60s
   arkime:
     image: ghcr.io/idaholab/malcolm/arkime:23.10.0
+    # todo: viewer/wise in hedgehog profile (and what about nginx reaching back?)
+    profiles: ["malcolm", "hedgehog"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -204,6 +211,7 @@ services:
       start_period: 210s
   zeek:
     image: ghcr.io/idaholab/malcolm/zeek:23.10.0
+    profiles: ["malcolm", "hedgehog"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -242,6 +250,7 @@ services:
       start_period: 60s
   zeek-live:
     image: ghcr.io/idaholab/malcolm/zeek:23.10.0
+    profiles: ["malcolm", "hedgehog"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -270,6 +279,7 @@ services:
       - ./zeek/intel:/opt/zeek/share/zeek/site/intel
   suricata:
     image: ghcr.io/idaholab/malcolm/suricata:23.10.0
+    profiles: ["malcolm", "hedgehog"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -306,6 +316,7 @@ services:
       start_period: 120s
   suricata-live:
     image: ghcr.io/idaholab/malcolm/suricata:23.10.0
+    profiles: ["malcolm", "hedgehog"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -332,6 +343,7 @@ services:
       - ./suricata/rules:/opt/suricata/rules:ro
   file-monitor:
     image: ghcr.io/idaholab/malcolm/file-monitor:23.10.0
+    profiles: ["malcolm", "hedgehog"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -358,6 +370,7 @@ services:
       start_period: 60s
   pcap-capture:
     image: ghcr.io/idaholab/malcolm/pcap-capture:23.10.0
+    profiles: ["malcolm", "hedgehog"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -380,6 +393,7 @@ services:
       - ./pcap/upload:/pcap
   pcap-monitor:
     image: ghcr.io/idaholab/malcolm/pcap-monitor:23.10.0
+    profiles: ["malcolm", "hedgehog"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -406,6 +420,7 @@ services:
       start_period: 90s
   upload:
     image: ghcr.io/idaholab/malcolm/file-upload:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -433,6 +448,7 @@ services:
       start_period: 60s
   htadmin:
     image: ghcr.io/idaholab/malcolm/htadmin:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -458,6 +474,7 @@ services:
       start_period: 60s
   freq:
     image: ghcr.io/idaholab/malcolm/freq:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -480,6 +497,7 @@ services:
       start_period: 60s
   netbox:
     image: ghcr.io/idaholab/malcolm/netbox:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -512,6 +530,7 @@ services:
       start_period: 120s
   netbox-postgres:
     image: ghcr.io/idaholab/malcolm/postgresql:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -536,6 +555,7 @@ services:
       start_period: 45s
   netbox-redis:
     image: ghcr.io/idaholab/malcolm/redis:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -564,6 +584,7 @@ services:
       start_period: 45s
   netbox-redis-cache:
     image: ghcr.io/idaholab/malcolm/redis:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
@@ -591,6 +612,7 @@ services:
       start_period: 45s
   api:
     image: ghcr.io/idaholab/malcolm/api:23.10.0
+    profiles: ["malcolm"]
     command: gunicorn --bind 0:5000 manage:app
     restart: "no"
     stdin_open: false
@@ -615,6 +637,7 @@ services:
       start_period: 60s
   nginx-proxy:
     image: ghcr.io/idaholab/malcolm/nginx-proxy:23.10.0
+    profiles: ["malcolm"]
     restart: "no"
     stdin_open: false
     tty: true
