--- a/config/process.env.example
+++ b/config/process.env.example
@@ -3,5 +3,7 @@ PUID=1000
 PGID=1000
 # for debugging container init via tini (https://github.com/krallin/tini)
 TINI_VERBOSITY=1
+# profile, for running all Malcolm containers ("malcolm") vs. capture-only containers ("hedgehog")
+MALCOLM_PROFILE=malcolm
 # for handling configmap/secrets files/directories
 CONFIG_MAP_DIR=configmap;secretmap
